fix(): Fix to sidenav z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -73,3 +73,7 @@ mat-drawer-content {
     flex-direction: column;
     align-items: flex-start;
 }
+
+mat-drawer{
+    z-index: 0 !important;
+}
