--- a/src/app/core/components/layout/toolbar/toolbar.component.scss
+++ b/src/app/core/components/layout/toolbar/toolbar.component.scss
@@ -6,7 +6,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10000;
     width: 100%;
     height: variables.$toolbar-height;
     padding: 0 15px;
